[package]
name = "hello"
version = "0.1.0"
edition = "2021"
[workspace]
members = [
    "disk",
    "future",
    "get_assets",
    "parallel_letter_frequency",
    "query",
    "simple_linked_list"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mini-pie"
test = false
bench = false
[dependencies]
colored = "2.1.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["blocking","json"] }
clap = { version = "4.5.13", features = ["derive"] }
[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["blocking","json"] }
