[package]
name = "shuttle518"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.26.0"
