[package]
name = "shuttle518"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.45.0"
shuttle-runtime = "0.45.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["postgres","chrono","rust_decimal"] }
tokio = "1.26.0"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }
rust_decimal_macros = "1.34.2"
reqwest = { version = "0.12.3", features = ["json"] }
image = "0.25.1"
