[package]
name = "shuttle51db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = {version="0.4.38",features=["serde"]}
serde = {version="1.0.200",features=["derive"]}
sqlx = {version="0.7.4",features=["postgres","runtime-tokio-rustls"]}
